logger added + kick command

--- a/Demo/src/main/resources/plugin.yml
+++ b/Demo/src/main/resources/plugin.yml
@@ -19,3 +19,5 @@ permissions:
         description: gives permission to set the sample message using the sample command
       demo.cake:
         description: give the player a block of cake
+      demo.kick:
+        description: kick the specified player out of the game
